2017-03-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.5-alpha04 final changes';git push
	git tag -a 4.6.5-alpha04 -m 'Version 4.6.5-alpha04 new features: ncclimo/ncremap copyright, quieter, nco_grd_nfr() refactor, ncap2 calendar format';git push --tags

	* Add ECMWF IFS data wrangling example to ncclimo docs for Jerry Potter

2017-03-07  Charlie Zender  <zender@uci.edu>

	* Improve nco_grd_nfr() to recognize all CF-approved forms of degrees_north and degrees_east

	* Re-factor nco_grd_nfr() algorithm to find coordinates first,
	then use coordinates to unambiguously deduce dimension names

2017-03-05  Charlie Zender  <zender@uci.edu>

	* Suppress multiple NaN warnings from nco_mss_val_get_dbl()

	* Functionalize chunk cache size set into nco_cnk_csh_ini()

2017-03-04  Charlie Zender  <zender@uci.edu>

	* Output NCO-standardish copyright/config notice from ncremap/ncclimo --version

2017-03-03  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.5-alpha03 final changes';git push
	git tag -a 4.6.5-alpha03 -m 'Version 4.6.5-alpha03 new features: rgr pop sungduk, timestamps, --version, --cnk_csh, --vrb_lvl ';git push --tags

	* Add --prn_vrb option to ncremap

2017-03-02  Charlie Zender  <zender@uci.edu>

	* Add chunk cache set to all other applicable operators

2017-03-01  Charlie Zender  <zender@uci.edu>

	* Clean-up warnings/redundancies in nco_rgr.c, nco_cln_utl.c

	* Add chunk cache set to ncra.c, fix it in ncks.c

2017-02-28  Charlie Zender  <zender@uci.edu>

	* Define vrs_prn before referencing in ncclimo, ncremap

	* Change timestamp printing switch from --prn_timestamp to --cal and synonyms

2017-02-28 Henry Butowsky  <henryb@hush.com>

	* Added timestamp printing capability to ncks

2017-02-24  Charlie Zender  <zender@uci.edu>

	* Add --version option to ncclimo, ncremap

2017-02-23  Charlie Zender  <zender@uci.edu>
