@@ -295,10 +295,10 @@ unq_sfx=".pid${spt_pid}" # [sng] Unique suffix
 var_lst='' # [sng] Variables to process (empty means all)
 var_rgr='' # [sng] CF template variable
 var_xmp='FSNT' # [sng] Variable list for examples
-vrb_lvl=1 # [sng] Verbosity level
+vrb_lvl=2 # [sng] Verbosity level
 vrb_0=0 # [sng] Verbosity level: Quiet
-vrb_1=1 # [sng] Verbosity level: Standard, minimal files
-vrb_2=2 # [sng] Verbosity level: All files
+vrb_1=1 # [sng] Verbosity level: Standard, minimal file I/O
+vrb_2=2 # [sng] Verbosity level: All file I/O
 vrb_3=3 # [sng] Verbosity level: English
 vrb_4=4 # [sng] Verbosity level: Pedantic
 vrs_prn='No' # [sng] Print version information
