@@ -10,7 +10,7 @@ ncks [\-3] [\-4] [\-5] [\-6] [\-7] [\-A] [\-a] [\-b
 .IR bnr_fl] 
 [\-\-bfr
 .IR sz_byt ] [\-C] [\-c] 
-[\-\-cdl] [\-\-cnk_byt
+[\-\-cal] [\-\-cdl] [\-\-cnk_byt
 .IR sz_byt ] [\-\-cnk_csh
 .IR sz_byt ] [\-\-cnk_dmn 
 .IR nm,sz_lmn ]
